k8s/ws.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typefast-ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: typefast-ws
  template:
    metadata:
      labels:
        app: typefast-ws
    spec:
      containers:
        - name: typefast-ws
          image: aay6ush/typefast-ws:47a8a7f4f070ec4cdc7a5d2f7e2fccc982f13ef4
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: typefast-ws
spec:
  selector:
    app: typefast-ws
  ports:
    - port: 80
      targetPort: 8080
